# magician-demonstrator-tree

./: CMakeLists.txt  README.md  package.xml
config/: bt_tree.xml
include/magician_demonstrator_tree/: demonstrator_behavior.hpp  demonstrator_node.hpp
src/: demonstrator_bahavior.cpp  demonstrator_node.cpp  main.cpp
